tests/parsing/smtlib/poly/errors/020_let_unclosed_1.expected
File "tests/parsing/smtlib/poly/errors/020_let_unclosed_1.psmt2", line 2, character 30-31:
2 | (assert (let ((x 42)) (= x 0) _
                                  ^
Error while parsing a term, read the reserved word '_',
      but expected a closing parenthesis to end the let binding.
